Add initial CSS styling
Populate style.css with basic styles such as Flexbox centering, font imports, color schemes, and responsiveness

--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 
 <body>
-    <h1>Naman</h1>
+    <section class="chat__section">
+        <div class="brand">
+            <img height="40" src="/public/wassup.png" alt="">
+            <h1>ChitChat</h1>
+        </div>
+
+        <div class="message_area">
+            <div class="incoming message">
+                <h4>Shivam</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, voluptate!</p>
+            </div>
+            <div class="outgoing message">
+                <h4>Naman</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, voluptate!</p>
+            </div>
+        </div>
+        
+        <div>
+            <textarea id="textarea" cols="30" rows="1" placeholder="Write a message..."></textarea>
+        </div>
+    </section>
     <script src="/client.js"></script>
 </body>
 
