Implement message receiving and display
Set up a Socket.io listener in client.js to handle incoming messages
Dynamically create HTML elements for each message and append them to the chat area for display

--- a/index.html
+++ b/index.html
@@ -15,16 +15,7 @@
             <h1>ChitChat</h1>
         </div>
 
-        <div class="message_area">
-            <div class="incoming message">
-                <h4>Shivam</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, voluptate!</p>
-            </div>
-            <div class="outgoing message">
-                <h4>Naman</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, voluptate!</p>
-            </div>
-        </div>
+        <div class="message__area"></div>
         
         <div>
             <textarea id="textarea" cols="30" rows="1" placeholder="Write a message..."></textarea>
